--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-﻿<!Doctype html>
+<!Doctype html>
 <html>
 <head>
 	<title>Menu CSS jQuery</title>
 	<meta charset="utf-8">
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script>
 	$(document).ready(function(){
 		$('#menu ul li').prepend('<span></span>');
@@ -13,41 +14,52 @@
 			});
 			$('#menu ul li').hover(function(){
 				$(this).find('span').stop().animate({
-					marginTop:"-40px"
-				},400);
+					marginLeft: "10"
+				},200);
 			},function(){
 				$(this).find('span').stop().animate({
-					marginTop:"0px"
-				},300);
+					marginLeft:"0px"
+				},200);
 			});
 	});
 	</script>
 
 	<style>
-		body{background:black;
+	
+		body{	
+			
+			
 			}
-		#menu{width:700px;
+		#menu{
+			/*width:700px;*/
+			width: 70%;
 			margin:auto;
            	}
 		#menu ul{list-style:none;
-			font-size:18px;
-			font-family:"Hobo Std";
+			font-size: 1.125em;
+			font-family:"Arial";
 			margin:0px;
 			padding:0px;
 			height:40px;
 			overflow:hidden;
+			width: 200px;
+			margin: auto;
+			height: 100%;
+			
 			}
 		#menu ul li{float:left;
+			height: 40px;
 			}
 		#menu ul li a, #menu ul li span{width:100px;
 			padding:10px 20px;
 			height:18px;
-			color:#FFFFFF;
+			color:black;
 			/*background:url("images/Degrade_img.jpg") repeat-x; */
-            background:red;
+			background: #4682B4;
 			text-decoration:none;
 			overflow:hidden;
 			text-align:center;
+			color: black;
 			}
 		#menu ul li span{
 			display:block;
@@ -56,7 +68,6 @@
 		#menu ul li a{
 			float:left;
 			background:url("images/Degrade_img.jpg") repeat-x left bottom;
-			color:#000000;
             height:10px;
 			}
 	</style>
